<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="25dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/order_food"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/edt_card_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_id"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <AutoCompleteTextView
            android:id="@+id/edt_table_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/table_number"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>