<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color"
    android:gravity="center"
    android:orientation="horizontal"
    tools:context="com.nutrica.client.Activities.SignupPlayer">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="41" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="228"
            android:orientation="vertical">

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="186" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:gravity="center"
                android:text="@string/signup_now"
                android:textColor="@color/main_color"
                android:textSize="18sp"
                android:textStyle="bold" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="24" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="32"
                android:background="@drawable/button_nine_patch_00"
                android:gravity="center_vertical|right"
                android:hint="@string/firstname_and_lastname"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="7dp"
                android:paddingRight="12dp"
                android:singleLine="true" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="9" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="32"
                android:background="@drawable/button_nine_patch_00"
                android:gravity="center_vertical|right"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="7dp"
                android:paddingRight="12dp"
                android:singleLine="true" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="9" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="32"
                android:background="@drawable/button_nine_patch_00"
                android:gravity="center_vertical|right"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="7dp"
                android:paddingRight="12dp"
                android:singleLine="true" />


            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="34"
                android:orientation="horizontal">

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="74" />

                <Button
                    android:id="@+id/btn_sing_up"
                    style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="80"
                    android:background="@drawable/button_nine_patch_01"
                    android:text="@string/sign_up"
                    android:textColor="@color/mdtp_white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="74" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="149" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="41" />
    </LinearLayout>
</LinearLayout>

