<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.nutrica.client.nutrica.com.nutrica.client.Activities.LoginActivityAdmin">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="41" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="228"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="155" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="33"
                android:drawableRight="@drawable/icon_admin_white"
                android:gravity="center"
                android:text="@string/enter_admins_of_gamenet"
                android:textColor="@color/mdtp_white"
                android:textSize="24sp"
                android:textStyle="bold" />


            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="26" />


            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:background="@drawable/button_nine_patch_00"
                android:gravity="center_vertical|right"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:maxLines="1"
                android:paddingLeft="12dp"

                android:paddingRight="7dp"
                android:singleLine="true" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="10" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="40"
                android:background="@drawable/button_nine_patch_00"
                android:gravity="center_vertical|right"
                android:hint="@string/prompt_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="12dp"
                android:paddingRight="7dp"
                android:singleLine="true" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="24" />

            <Button
                android:id="@+id/btn_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="50dp"
                android:layout_weight="15"
                android:background="@null"
                android:text="@string/forgot_password"
                android:textColor="@color/mdtp_white"
                android:textSize="12sp"
                android:visibility="invisible" />

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="31" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="35"
                android:orientation="horizontal">

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="84" />

                <Button
                    android:id="@+id/btn_sing_in"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="35"
                    android:background="@drawable/button_nine_patch_00"
                    android:text="@string/enter"
                    android:textColor="@color/main_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="84" />
            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="135" />

        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="41" />
    </LinearLayout>
</LinearLayout>

