<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/new_game_form1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/new_game_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40" />

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="227"
                android:orientation="vertical">

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="55" />

                <EditText
                    android:id="@+id/edt_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="34"
                    android:background="@drawable/button_nine_patch_00"
                    android:gravity="center_vertical|right"
                    android:hint="@string/nickname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingLeft="12dp"
                    android:paddingRight="7dp"
                    android:singleLine="true" />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="12" />

                <Spinner
                    android:id="@+id/spinner_game_list"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="34"
                    android:background="@drawable/button_nine_patch_00" />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="12" />

                <Spinner
                    android:id="@+id/spinner_competition_type"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="34"
                    android:background="@drawable/button_nine_patch_00" />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="12" />

                <Spinner
                    android:id="@+id/spinner_team_count"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="34"
                    android:background="@drawable/button_nine_patch_00" />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="30" />

                <Button
                    android:id="@+id/btn_signup_date"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="34"
                    android:background="@drawable/button_nine_patch_01"
                    android:text="@string/signup_date"
                    android:textColor="@color/mdtp_white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="12" />

                <Button
                    android:id="@+id/btn_start_date"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="34"
                    android:background="@drawable/button_nine_patch_01"
                    android:text="@string/start_date"
                    android:textColor="@color/mdtp_white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="30" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="34"
                    android:orientation="horizontal">

                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="73" />

                    <Button
                        android:id="@+id/btn_send"
                        style="?android:textAppearanceSmall"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="82"
                        android:background="@drawable/button_nine_patch_01"
                        android:text="@string/send"
                        android:textColor="@color/mdtp_white"
                        android:textSize="16dp"
                        android:textStyle="bold" />


                    <android.support.v4.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="73" />


                </LinearLayout>

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="30" />

            </LinearLayout>

            <android.support.v4.widget.Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="40" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
